syntax = "proto3";

import "google/protobuf/empty.proto";

option go_package = "./server/proto";

package user;

service UserService {
  rpc CreateUser (UserCreateRequest) returns (UserInfo);
  rpc UpdateUser (UserUpdateRequest) returns (UserInfo);
  rpc GetUserInfo (UserInfoRequest) returns (UserInfo);
}

service LoginService {
  rpc Login (LoginRequest) returns (google.protobuf.Empty);
  rpc Logout (google.protobuf.Empty) returns (google.protobuf.Empty);
}

message UserCreateRequest {
  string account_name = 1;
  string password = 2;
}


message UserInfoRequest {
  int32 user_id = 1;
}

message UserUpdateRequest {
  int32 user_id = 1;
  string account_name = 2;
  string old_password = 3;
  string new_password = 4;
}

message UserInfo {
  int32 user_id = 1;
  string account_name = 2;
}

message LoginRequest {
  string account_name = 1;
  string password = 2;
}

message User {
  int32 user_id = 1;
  string account_name = 2;
  string password_hash = 3;
}